--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,80 @@
 /* You can add global styles to this file, and also import other style files */
+// *{
+//   margin: 0;
+//   padding: 0;
+//   box-sizing: border-box;
+// }
+
+// body {
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: center;
+//   align-items: center;
+//   height: 100vh;
+//   width: 100vw;
+//   background-color: black;
+//   color: white;
+//   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+// }
+
+
+:root {
+  --primaryColor: rgb(189, 0, 0);
+}
+
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  font-weight: normal;
+}
+
+#app {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+body {
+  text-wrap: balance;
+  display: flex;
+  height: 100%;
+  min-height: 100vh;
+  min-width: 100vw;
+  overflow-x: hidden;
+  color: rgba(235, 235, 235, 0.64);
+  background: #181818;
+  line-height: 1.6;
+  font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
+    Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-size: 15px;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+
+  padding: 40px 100px;
+}
+
+h1 {
+  font-weight: 700;
+  font-size: 50px;
+}
+
+h2 {
+  font-weight: 700;
+  font-size: 40px;
+}
+
+span{
+  font-weight: 500;
+  text-decoration: underline;
+}
+
+a {
+  text-decoration: none;
+  color: var(--primaryColor);
+  transition: 0.4s;
+  margin-right: 15px;
+}
